target_sources(${PROJECT_NAME}_static_library
        PRIVATE
        analysis.cpp
        trojan/relay.cpp
        trojan/format.cpp
        vless/relay.cpp
        vless/format.cpp
        shadowsocks/relay.cpp
        shadowsocks/format.cpp
)

target_sources(${PROJECT_NAME}_static_library
        PUBLIC
        FILE_SET public_headers TYPE HEADERS
        BASE_DIRS ${PROJECT_SOURCE_DIR}/include
        FILES
            ${PROJECT_SOURCE_DIR}/include/prism/protocol.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/analysis.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/http.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/probe.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/form.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/stream.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/wire.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/relay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/format.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/relay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/format.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/salt_pool.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/format.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/relay.hpp
)

add_subdirectory(http)
