target_sources(${PROJECT_NAME}_static_library
        PRIVATE
        analysis.cpp
        trojan/relay.cpp
        trojan/format.cpp
        vless/relay.cpp
        vless/format.cpp
        shadowsocks/relay.cpp
        shadowsocks/format.cpp
        shadowsocks/datagram.cpp
        reality/request.cpp
        reality/auth.cpp
        reality/keygen.cpp
        reality/response.cpp
        reality/session.cpp
        reality/handshake.cpp
)

target_sources(${PROJECT_NAME}_static_library
        PUBLIC
        FILE_SET public_headers TYPE HEADERS
        BASE_DIRS ${PROJECT_SOURCE_DIR}/include
        FILES
            ${PROJECT_SOURCE_DIR}/include/prism/protocol.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/analysis.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/http.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/probe.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/form.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/stream.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/wire.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/relay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/format.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/relay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/format.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/message.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/salts.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/format.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/relay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/replay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/tracker.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/datagram.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/request.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/auth.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/keygen.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/response.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/session.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/reality/handshake.hpp
)

add_subdirectory(http)
