target_sources(${PROJECT_NAME}_static_library
        PRIVATE

        socks5/conn.cpp
        socks5/process.cpp
        trojan/conn.cpp
        trojan/framing.cpp
        trojan/process.cpp
        vless/conn.cpp
        vless/framing.cpp
        vless/process.cpp
        shadowsocks/conn.cpp
        shadowsocks/framing.cpp
        shadowsocks/util/datagram.cpp
        shadowsocks/process.cpp
)

target_sources(${PROJECT_NAME}_static_library
        PUBLIC
        FILE_SET public_headers TYPE HEADERS
        BASE_DIRS ${PROJECT_SOURCE_DIR}/include
        FILES
            ${PROJECT_SOURCE_DIR}/include/prism/protocol.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/protocol_type.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/target.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/mux.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/tls/types.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/http.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/form.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/address.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/framing.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/read.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/common/udp_relay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/packet.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/conn.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/framing.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/socks5/process.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/packet.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/conn.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/framing.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/trojan/process.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/packet.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/conn.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/framing.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/vless/process.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/config.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/constants.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/packet.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/conn.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/framing.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/process.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/util/salts.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/util/replay.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/util/tracker.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/util/datagram.hpp
            ${PROJECT_SOURCE_DIR}/include/prism/protocol/shadowsocks/util/cast.hpp
)

add_subdirectory(http)
